k8s/manifest/grafana/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    app.kubernetes.io/name: observability
    app.kubernetes.io/component: namespace
    app.kubernetes.io/part-of: tombo
